Undo breaks lattice #67450

Closed
opened 2019-07-22 15:50:12 +02:00 by Why Would I · 4 comments

System Information
Operating system: Linux-5.2.0-arch2-1-ARCH-x86_64-with-arch 64 Bits
Graphics card: Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.1.2

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: 38d4483c6a
Worked: (optional)

Short description of error
Undoing a lattice edit results in somewhat arbitrarily mangled mesh.

Exact steps for others to reproduce the error

  • Create an icosphere.
  • Create a lattice.
  • Scale lattice, so it's larger than sphere.
  • Add lattice modifier to sphere and select the lattice.
  • Select lattice, enter edit mode.
  • Move lattice point.
  • "Subdivide" lattice in the modified direction.
  • Move a newly created lattice point.

Undo "a couple of times." (usually once or twice)

Result - completely mangled mesh (sometimes scrunched up, sometimes stretched to infinity).undo_breaks_on_property_change.blend

Pictures.tar.gz

I have attached images explaining the process and the result.
First picture shows the state after state "4;" second image shows state "6;" third image shows "8;" and the last image is the result, in this case after three Undos.

**System Information** Operating system: Linux-5.2.0-arch2-1-ARCH-x86_64-with-arch 64 Bits Graphics card: Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.1.2 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: `38d4483c6a` Worked: (optional) **Short description of error** Undoing a lattice edit results in somewhat arbitrarily mangled mesh. **Exact steps for others to reproduce the error** - Create an icosphere. - Create a lattice. - Scale lattice, so it's larger than sphere. - Add lattice modifier to sphere and select the lattice. - Select lattice, enter edit mode. - Move lattice point. - "Subdivide" lattice in the modified direction. - Move a newly created lattice point. # Undo "a couple of times." (usually once or twice) Result - completely mangled mesh (sometimes scrunched up, sometimes stretched to infinity).[undo_breaks_on_property_change.blend](https://archive.blender.org/developer/F7623117/undo_breaks_on_property_change.blend) [Pictures.tar.gz](https://archive.blender.org/developer/F7623122/Pictures.tar.gz) I have attached images explaining the process and the result. First picture shows the state after state "4;" second image shows state "6;" third image shows "8;" and the last image is the result, in this case after three Undos.
Author

Added subscriber: @arctiq1

Added subscriber: @arctiq1
Author

Actually, a much simpler steps are to:

  • Create a lattice
  • Move any point
  • Increase lattice resolution in any direction
  • Undo

I think it's pretty obvious that the issue is that undo does not undo the resolution change and ends up assigning garbage values to the previously inexistent vertices.

Actually, a much simpler steps are to: - Create a lattice - Move any point - Increase lattice resolution in any direction - Undo I think it's pretty obvious that the issue is that undo does not undo the resolution change and ends up assigning garbage values to the previously inexistent vertices.

This issue was referenced by 34ad6da4a0

This issue was referenced by 34ad6da4a06ef46cd19945f61cc5f968538546a8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-07-23 09:27:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67450
No description provided.