Fix T67450: Crash undoing edit-mode lattice resolution